2005-07-26 Mikhail Khodjaiants
	Bug 105224: Two identical directory source container types.
	* plugin.properties

2005-07-26 Mikhail Khodjaiants
	Bug 102929: Race conditions when setting breakpoints at launch.
	The initial breakpoint settings, stop in main and resume are batched 
	in one job. This garantees the right order of commands sent to the backend.
	* CDIDebugModel.java
	* CBreakpointManager.java
	* CDebugTarget.java

2005-07-22 Alain Magloire
	Fix to Copyright.
	* src/org/eclipse/cdt/debug/internal/core/CBreakpointManager.java

2005-07-18 Alain Magloire
	new launch constant for the MI protocol
	* src/org/eclipse/cdt/debug/core/ICDTLaunchConfigurationConstants.java

2005-07-14 Mikhail Khodjaiants
	Bug 103917: NPE in Variables View.
	* AbstractCValue.java

2005-07-14 Mikhail Khodjaiants
	Bug 103784: NPE in source lookup.
	* CSourceLookupDirector.java

2005-07-11 Mikhail Khodjaiants
	Bug 94770: Breakpoint marker messages need formatting.
	* BreakpointMessages.properties
	* CAddressBreakpoint.java
	* CFunctionBreakpoint.java
	* CLineBreakpoint.java
	* CWatchpoint.java

2005-07-11 Mikhail Khodjaiants
	Bug 102077: The DebugLabelViewDecorato asking info out of context.
	Added a new flag to CVariable indicate the disposed state and prevent target requests.
	* CExpression.java
	* CGlobalVariable.java
	* CVariable.java

2005-07-11 Mikhail Khodjaiants
	Bug 102563: Break points not working. 
	Temporary switching back to use file names instead of full paths.
	* CBreakpointManager.java

2005-07-10 Mikhail Khodjaiants
	Bug 103173: Register: user created register groups disappear after debug session restart.
	* CRegisterManager.java

2005-07-08 Mikhail Khodjaiants
	Filter breakpoints before setting using the source lookup mechanism.
	* CBreakpointManager.java
	* CSourceLookupDirector.java

2005-07-08 Mikhail Khodjaiants
	Bug 79371: Setting breakpoints in the left hand side ruler of the disassembly view is sluggish.
	Asynchronous breakpoint handling.